# lunaro-manager

./: .env.example  .env.schema  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  compose.yaml  config.js  deno.json  denon.json  deploy-commands.js  docker-compose.yaml  docker-compose.yml  dockerfile  environment.js  flake.nix  import-map.json  index.js  license.md  log4rs.yaml  package-lock.json  package.json  paths.json  shell.nix  tsconfig.json
.github/workflows/: build.yml  lunaro_manager.yml  publish.yml
commands/: help.js  info.js  rtp.js  source.js  tracker.js
events/: interactionCreate.js
src/: bot.ts  deploy-commands.ts  env.rs  env.ts  environment.ts  index.ts  main.rs  main.ts
src/commands/: about.rs  about.ts  config.ts  contribute.rs  contribute.ts  help.rs  help.ts  mod.rs  ping.rs  ping.ts  play.rs  ranked.ts  ready.rs  rtp.rs  rtp.ts  tracking.rs  tracking.ts
src/error/: invocation-error.ts  pattern-error.ts
src/errors/: data.rs  env.rs  mod.rs
src/events/: interaction-create.ts  interactionCreate.ts  mod.rs  presence-update.ts  presence_update.rs  reaction-add.ts  reaction-remove.ts  ready.rs  ready.ts
src/interfaces/: activity-tracker-data.ts  bot-command.ts  command.ts  discord-bot.ts  discord-user.ts  interaction-reply.ts  lunaro-match.ts  lunaro-player.ts  pending-match.ts
src/traits/: config_file.rs
src/types/: mod.rs  poise.rs
src/util/: activity-tracker.ts  activity-tracking.ts  activity_tracking.rs  commands.ts  creators.ts  data.rs  data.ts  discord-user.ts  instance.ts  interactions.ts  logger.ts  lunaro_tracking.rs  match-approval.ts  (+9 more)
ts/: .env.example  .gitignore  deno.json  denon.json  docker-compose.yml  dockerfile  paths.json
util/: fetchLunaroPlayers.js  logger.js  lunaroPlayers.js  rtpRole.js  state.js  whitelist.js
(+14 files in other folders)
