[package]
name = "lunaro_manager"
version = "2.0.0"
edition = "2021"

[dependencies]
async-trait = "0.1.73"
chrono = "0.4.26"
dotenv = "0.15.0"
futures = "0.3.28"
log = "0.4.20"
log4rs = "1.2.0"
poise = { version = "0.5.5" }
regex = "1.9.4"
reqwest = "0.11.20"
rustc_version_runtime = "0.2.1"
serde = "1.0.188"
serde_json = "1.0.105"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
toml = "0.7.6"
uuid = { version = "1.4.1", features = ["v4"] }
