[package]
name = "lunaro_manager"
version = "2.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1.81" }
chrono = { version = "0.4.38" }
dotenv = { version = "0.15.0" }
futures = { version = "0.3.30" }
log = { version = "0.4.22" }
log4rs = { version = "1.3.0" }
poise = { version = "0.6.0" }
regex = { version = "1.10.6" }
reqwest = { version = "0.12.7" }
rustc_version_runtime = { version = "0.3.0" }
serde = { version = "1.0.209" }
serde_json = { version = "1.0.127" }
thiserror = { version = "1.0.63" }
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tokio-util = { version = "0.7.11" }
toml = { version = "0.8.19" }
uuid = { version = "1.10.0", features = ["v4"] }
